# texjam

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: publish.yml
example/: texjam.json  texjam.toml  texjam.yaml
example/output/foo-bar/: Foo Bar.md  path.txt
example/plugins/: plugin.py
example/src/(((slug)))/: (((name))).md  README.md  test.yaml
example/src/[-slug-]/: [-name-].md
example/src/plugins/: plugin.py
schema/: texjam.json
tests/: test_metafield.py  test_render.py
texjam/: __init__.py  config.py  data.py  exception.py  main.py  package.py  scaffold.py  source.py
texjam/cli/: app.py  package.py  source.py
texjam/config/: __init__.py  config.py  meta.py
texjam/render/: __init__.py  executor.py  path.py
