[project]
name = "texjam"
version = "0.4.4"
description = "A scaffold for LaTeX templates."
authors = [{ name = "Quaerent", email = "topfyf@qq.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "click (>=8.3.1,<9.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "binaryornot (>=0.4.4,<0.5.0)",
    "appdirs (>=1.4.4,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
]
classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Education",

  "Topic :: Text Processing",
  "Topic :: Text Processing :: Markup",
  "Topic :: Text Processing :: Markup :: LaTeX",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Utilities",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/quaerent/texjam"
Repository = "https://github.com/quaerent/texjam"
Issues = "https://github.com/quaerent/texjam/issues"

[project.scripts]
texjam = "texjam.main:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["ruff (>=0.14.8,<0.15.0)"]
test = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)"
]
